finalized challenge info and read me + fixed truncate text on modal in small devices

--- a/src/app/ui/confirmed-modal/confirmed-modal.component.scss
+++ b/src/app/ui/confirmed-modal/confirmed-modal.component.scss
@@ -43,6 +43,7 @@
   }
 
   &__items {
+    max-width: calc(100vw - (var(--spacing-300) * 2));
     padding: var(--spacing-300) var(--spacing-300) 0 var(--spacing-300);
     display: flex;
     flex-direction: column;
@@ -67,10 +68,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: var(--spacing-400);
+    gap: var(--spacing-100);
   }
 
   &__item-name {
+    width: 40vw;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
